# google-maps-reviews-extractor-api

./: .gitignore  STRUCTURE.md  package.json  pyproject.toml  scrapy.cfg  serverless.yaml
api/: main.py
api/domain/models/dao/: bussiness.py  review.py  scrapy_review.py
api/domain/schemas/request_schemas/: bussiness_request.py  maps_api.py
api/domain/schemas/response_schemas/: base_api_response.py  bussiness_response.py  maps_api.py
api/presentation/routes/: bussiness_router.py
api/services/connectors/: maps_api_connector.py  supabase_connector.py
api/services/repositories/: bussiness_repository.py  reviews_repository.py
api/services/repositories/interfaces/: bussiness_interface.py  reviews_interface.py
api/usecases/: bussiness_usescases.py  reviews_usecases.py
api/utils/: date_utils.py  url_utils.py
config/: api.py  async_api.py
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/routines/: run.py
scraper/spiders/: google.py
